force-app/main/default/objects/Movie__c/fields/Rented_Qty__c.field-meta.xml
<CustomField>
    <fullName>Rented_Qty__c</fullName>
    <label>Rented Qty</label>
    <summaryFilterItems>
        <field>Inventory__c.Status__c</field>
        <operation>equals</operation>
        <value>Rented</value>
    </summaryFilterItems>
    <summaryForeignKey>Inventory__c.Movie__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>