force-app/main/default/objects/Movie__c/fields/Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty__c</fullName>
    <label>Total Qty</label>
    <summaryForeignKey>Inventory__c.Movie__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>